Getting of javafx